--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,101 @@
     grid-row: 1/3;
   }
 }
+.wrapper-logos {
+  display: none;
+}
+
+.phone-features {
+  display: none;
+}
+
+.part-2 {
+  padding-left: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.head-paragraph-features {
+  text-align: center;
+}
+
+.header-features {
+  padding: 2rem;
+  font-size: 1.74375rem;
+  font-weight: 800;
+  line-height: 2.26313rem;
+}
+
+.paragraph-features {
+  line-height: 1.8rem;
+  padding: 0 1rem 0 1rem;
+}
+
+.parent-logo-text {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 1rem;
+}
+
+.parent-logo-text p {
+  line-height: 1.6rem;
+}
+
+.position-text-pic {
+  display: flex;
+  align-items: flex-start;
+  padding-top: 2rem;
+}
+
+.sub-head-paragraphs {
+  margin-left: 1rem;
+}
+
+@media (min-width: 768px) {
+  .part-2 {
+    max-width: 720px;
+  }
+  .wrapper-logos {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3rem;
+    gap: 1rem;
+  }
+  #desktop-only {
+    display: none;
+  }
+  .logo-desktop-tablet {
+    border: 1px solid #9397AD;
+    height: 100px;
+    width: 9.90625rem;
+    height: 6.15875rem;
+    border-radius: 8px;
+    padding: 2.05rem 0.55rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .parent-logo-text {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1rem;
+    margin-bottom: 4rem;
+  }
+}
+@media (min-width: 1400px) {
+  .part-2 {
+    max-width: 1320px;
+    display: grid;
+  }
+  #desktop-only {
+    display: block;
+  }
+  .phone-features {
+    display: block;
+  }
+}
 a {
   color: #6366F1;
   text-decoration: none;
@@ -329,8 +424,8 @@ a:hover {
 }
 
 #container-1 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin-left: auto;
   margin-right: auto;
 }
