feature: Done with part 3

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,7 @@ $brand-primary: #6366F1;
 $light-text: white;
 $color-grey: #9397AD;
 $color-dark: #000;
+$bgp3: #F3F6FF;
 
 
-$container-padding: 1rem;
+$container-padding: 1rem 0 1rem 0;
