--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -112,7 +112,8 @@
     .image2 {
         position: absolute;
         top: 110%;
-        left: 2.5%;
+        left: 2%;
+        border-radius: 40px;
         
     }
     .image3 {
