--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@
 @import "./variables";
 @import "./part-1";
 @import "./part-2";
+@import "./part-3";
 @import "./header";
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
