--- a/styles/_part-3.scss
+++ b/styles/_part-3.scss
@@ -1,7 +1,11 @@
 .section-4 {
     background-color: $bgp3;
     height: 100%;
-    padding: $container-padding;
+}
+.part-3 {
+    padding: 0 1rem 0 1rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 .phone-tablet-left {
     display: none;
@@ -78,8 +82,6 @@
 @media (min-width: 1400px) {
     .part-3 {
         max-width: 1320px;
-        width: 100%;
-        padding-left: 50rem;
     }
     .pics-transaction-tablet-mobile {
         display: none;
