--- a/styles/style.css
+++ b/styles/style.css
@@ -350,7 +350,12 @@
 .section-4 {
   background-color: #F3F6FF;
   height: 100%;
-  padding: 1rem 0 1rem 0;
+}
+
+.part-3 {
+  padding: 0 1rem 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .phone-tablet-left {
@@ -437,8 +442,6 @@
 @media (min-width: 1400px) {
   .part-3 {
     max-width: 1320px;
-    width: 100%;
-    padding-left: 50rem;
   }
   .pics-transaction-tablet-mobile {
     display: none;
