--- a/styles/_part-3.scss
+++ b/styles/_part-3.scss
@@ -98,7 +98,7 @@
         text-align: center;
     }
     .h3-paragraph-desktop p {
-        padding-top: 1rem;
+        padding: 1rem 15rem 1rem 15rem;
         line-height: 160%;
     }
     .transaction-head4 {
