--- a/styles/style.css
+++ b/styles/style.css
@@ -458,7 +458,7 @@
     text-align: center;
   }
   .h3-paragraph-desktop p {
-    padding-top: 1rem;
+    padding: 1rem 15rem 1rem 15rem;
     line-height: 160%;
   }
   .transaction-head4 {
@@ -498,6 +498,83 @@
     transform: translate(100%, 10%);
     border-radius: 30px;
     opacity: 0.8;
+  }
+}
+.section-5-only-desktop {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .section-5-only-desktop {
+    display: none;
+  }
+}
+@media (min-width: 1400px) {
+  .section-5-only-desktop {
+    display: block;
+    height: 81.5rem;
+    display: grid;
+    grid-template-columns: repeat(24, minmax(0, 1fr));
+    grid-template-rows: repeat(24, minmax(0, 1fr));
+    position: relative;
+    padding: 0 1rem 0 1rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .image-right {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(30%, -140%);
+  }
+  .image-right2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(130%, -190%);
+  }
+  .image-left {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-120%, 20%);
+  }
+  .image-left2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-115%, 70%);
+  }
+  .recieve-head {
+    grid-column: 14/19;
+    grid-row: 16/18;
+  }
+  .flex-recieve {
+    display: flex;
+    grid-column: 14/20;
+    grid-row: 18/21;
+    gap: 1rem;
+  }
+  .btn-2 {
+    grid-column: 14/16;
+    grid-row: 21/22;
+  }
+  .make-money {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    grid-column: 7/12;
+    grid-row: 5/10;
+  }
+  .list-head {
+    list-style: none;
+    gap: 1rem;
+  }
+  .check {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 10px;
   }
 }
 a {
