--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @import "./part-1";
 @import "./part-2";
 @import "./part-3";
+@import "./part-4-onlydesktop";
 @import "./header";
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
