--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -122,8 +122,8 @@ a:hover {
 }
 
 #container-1 {
-    padding-left: $container-padding;
-    padding-right: $container-padding;
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin-left: auto;
     margin-right: auto;
 }
