--- a/styles/_part-4-onlydesktop.scss
+++ b/styles/_part-4-onlydesktop.scss
@@ -9,6 +9,7 @@
 
 @media (min-width: 1400px) {
     .section-5-only-desktop {
+        max-width: 1320px;
         display: block;
         height: 81.5rem;
         display: grid;
@@ -49,20 +50,43 @@
     }
     .flex-recieve {
         display: flex;
-        grid-column: 14 / 20;
+        grid-column: 14 / 22;
         grid-row: 18 / 21;
         gap: 1rem;
     }
+    .btn-1 {
+        grid-column: 4 / 7;
+        grid-row: 9 / 10;
+    }
     .btn-2 {
-        grid-column: 14 / 16;
+        grid-column: 14 / 17;
         grid-row: 21 / 22;
     }
     .make-money {
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        grid-column: 7 / 12;
+        grid-column: 4 / 12;
         grid-row: 5 / 10;
+    }
+    .btn-money {
+        background-color: $brand-primary;
+        color: $light-text;
+        border-radius: 8px;
+        padding: 10px 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        gap: 1rem;
+        &:hover {
+            background-color: $color-grey;
+            color: $light-text;
+            text-decoration: none;
+        }
+    i {
+        margin-right: 0.5rem;
+    }
     }
     .list-head {
         list-style: none;
