--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
 .btn-apple {
   margin-top: 2rem;
   display: flex;
-  width: 22.9rem;
+  width: 100%;
   height: 3.15063rem;
   padding: 0.55rem 7.575rem;
   justify-content: center;
@@ -50,7 +50,7 @@
 .btn-google {
   margin-top: 1rem;
   display: flex;
-  width: 22.9rem;
+  width: 100%;
   height: 3.15063rem;
   padding: 0.55rem 7.575rem;
   justify-content: center;
@@ -511,6 +511,7 @@
 }
 @media (min-width: 1400px) {
   .section-5-only-desktop {
+    max-width: 1320px;
     display: block;
     height: 81.5rem;
     display: grid;
@@ -551,20 +552,43 @@
   }
   .flex-recieve {
     display: flex;
-    grid-column: 14/20;
+    grid-column: 14/22;
     grid-row: 18/21;
     gap: 1rem;
   }
+  .btn-1 {
+    grid-column: 4/7;
+    grid-row: 9/10;
+  }
   .btn-2 {
-    grid-column: 14/16;
+    grid-column: 14/17;
     grid-row: 21/22;
   }
   .make-money {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    grid-column: 7/12;
+    grid-column: 4/12;
     grid-row: 5/10;
+  }
+  .btn-money {
+    background-color: #6366F1;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    gap: 1rem;
+  }
+  .btn-money:hover {
+    background-color: #9397AD;
+    color: white;
+    text-decoration: none;
+  }
+  .btn-money i {
+    margin-right: 0.5rem;
   }
   .list-head {
     list-style: none;
@@ -577,6 +601,177 @@
     padding-top: 10px;
   }
 }
+.part-5 {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .part-5 {
+    display: none;
+  }
+}
+@media (min-width: 1400px) {
+  .section-6-only-desktop {
+    background-color: #F3F6FF;
+  }
+  .part-5 {
+    display: block;
+    max-width: 1320px;
+    height: 33.88rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-rows: repeat(12, minmax(0, 1fr));
+    padding-top: 3rem;
+  }
+  .quote {
+    background-color: #6366F1;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+  #quote-first {
+    border: 1px transparent;
+    width: 2.75rem;
+    height: 2.75rem;
+    padding: 0.75rem;
+    box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
+    border-radius: 0.375rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    grid-column: 13/14;
+    grid-row: 2/3;
+    z-index: 1;
+  }
+  #quote-second {
+    border: 1px transparent;
+    width: 2.75rem;
+    height: 2.75rem;
+    padding: 0.75rem;
+    box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
+    border-radius: 0.375rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    grid-column: 7/8;
+    grid-row: 2/3;
+    z-index: 1;
+  }
+  .box {
+    background-color: #fff;
+    border: 1px transparent;
+    border-radius: 0.5rem;
+    width: 26rem;
+    padding: 3rem 1.5rem 1.5rem 1.5rem;
+    gap: 1.5rem;
+    box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
+    grid-column: 6/9;
+  }
+  .box-1 {
+    grid-column: 7/12;
+    grid-row: 3/10;
+  }
+  .box-2 {
+    grid-column: -1/auto;
+    grid-row: 3/10;
+  }
+  .par-main {
+    padding: 1rem 0;
+  }
+  .name-title {
+    display: flex;
+    gap: 1rem;
+  }
+  .par-name {
+    color: #0B0F19;
+    font-feature-settings: "liga" off, "clig" off;
+    font-family: Manrope;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 160%;
+  }
+  .par-designer {
+    color: #9397AD;
+    font-feature-settings: "liga" off, "clig" off;
+    font-family: Manrope;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+  }
+  h1 {
+    color: #0B0F19;
+    font-feature-settings: "liga" off, "clig" off;
+    font-family: Manrope;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 130%;
+    grid-column: 1/5;
+    grid-row: 2/auto;
+    padding-top: 2rem;
+  }
+}
+.part-6 {
+  margin: 0 auto;
+  padding: 0 1rem 0 1rem;
+}
+
+.btn-accordion::before {
+  display: flex;
+  width: 2.75rem;
+  height: 2.75rem;
+  padding: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.375rem;
+  border: 1px solid #FFF;
+  background: #F3F6FF;
+}
+
+.btn-accordion::after {
+  display: flex;
+  width: 2.75rem;
+  height: 2.75rem;
+  padding: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.375rem;
+  border: 1px solid #FFF;
+  background: #1f44b2;
+  transform: rotate(180deg);
+}
+
+.accordion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: 1px solid rgb(213, 213, 213);
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  box-shadow: 0px -1px 0px 0px #E2E5F1 inset;
+  border-radius: 0.4375rem 0.4375rem 0rem 0rem;
+}
+
+.active, .accordion:hover {
+  background-color: #fff;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
 a {
   color: #6366F1;
   text-decoration: none;
@@ -689,8 +884,8 @@ a:hover {
 }
 
 #container-1 {
-  padding-left: 1rem 0 1rem 0;
-  padding-right: 1rem 0 1rem 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin-left: auto;
   margin-right: auto;
 }
