--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,8 @@
 @import "./part-2";
 @import "./part-3";
 @import "./part-4-onlydesktop";
+@import "./part-5-onlydesktop";
+@import "./part-6";
 @import "./header";
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
