--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,6 +6,7 @@
 @import "./part-4-onlydesktop";
 @import "./part-5-onlydesktop";
 @import "./part-6";
+@import "./part-7";
 @import "./header";
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
