--- a/styles/style.css
+++ b/styles/style.css
@@ -882,6 +882,9 @@
   align-items: center;
   gap: 1rem;
   padding: 1rem 1rem;
+  font-size: 1.35rem;
+  font-weight: 800;
+  line-height: 1.8875rem;
 }
 
 .text-subscribe-desktop-only {
@@ -934,6 +937,55 @@ input::placeholder {
   text-decoration: none;
 }
 
+@media (min-width: 768px) {
+  .part-7 {
+    min-width: 720px;
+    display: flex;
+    height: 13.63rem;
+    margin-right: 2rem;
+    margin-left: 0.5rem;
+  }
+  .btn-subscribe {
+    border: none;
+    position: absolute;
+    vertical-align: middle;
+    right: 0;
+    background-color: #6366F1;
+    color: white;
+    border-radius: 0.375rem;
+    width: 7rem;
+    height: 100%;
+    aspect-ratio: 1;
+  }
+  .btn-subscribe:hover {
+    background-color: #9397AD;
+    color: white;
+    text-decoration: none;
+  }
+  .text-subscribe {
+    margin: 1rem 3rem 1rem 1rem;
+    gap: 3rem;
+  }
+  .text-subscribe h4 {
+    font-size: 1.41875rem;
+    font-weight: 800;
+  }
+}
+@media (min-width: 1400px) {
+  .part-7 {
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 0 1rem 3rem 1rem;
+  }
+  .only-mobile-tablet {
+    display: none;
+  }
+  .text-subscribe-desktop-only {
+    display: block;
+    display: flex;
+    align-items: center;
+  }
+}
 a {
   color: #6366F1;
   text-decoration: none;
