--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./variables";
+@import "./header";
 @import "./part-1";
 @import "./part-2";
 @import "./part-3";
@@ -7,7 +8,7 @@
 @import "./part-5-onlydesktop";
 @import "./part-6";
 @import "./part-7";
-@import "./header";
+@import "./footer";
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
