--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,165 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+a {
+  color: #6366F1;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #6366F1;
+  text-decoration: underline;
+}
+
+.btn-toogle-switch {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  /* copy from W3 school */
+  /* The slider */
+  /* Rounded sliders */
+}
+.btn-toogle-switch .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.btn-toogle-switch .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.btn-toogle-switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+.btn-toogle-switch .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
+.btn-toogle-switch input:checked + .slider {
+  background-color: #6366F1;
+}
+.btn-toogle-switch input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+.btn-toogle-switch input:checked + .slider:before {
+  transform: translateX(26px);
+}
+.btn-toogle-switch .slider.round {
+  border-radius: 34px;
+}
+.btn-toogle-switch .slider.round:before {
+  border-radius: 50%;
+}
+
+.btn-toogle-switch .label {
+  display: none;
+}
+
+.btn-primary {
+  background-color: #6366F1;
+  color: white;
+  border-radius: 8px;
+  padding: 12px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.btn-primary:hover {
+  background-color: #9397AD;
+  color: white;
+  text-decoration: none;
+}
+.btn-primary i {
+  margin-right: 0.5rem;
+}
+
+.btn-mobile {
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+}
+
+.nav-link {
+  color: #000;
+  font-weight: 600;
+  text-decoration: none;
+}
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+.navbar {
+  display: none;
+}
+
+#signin {
+  display: none;
+}
+
+#container-1 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  gap: 1.5rem;
+  align-items: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  #container-1 {
+    max-width: 720px;
+  }
+  .btn-toogle-switch .label {
+    display: block;
+  }
+  .nav {
+    gap: 3rem;
+  }
+}
+@media (min-width: 1400px) {
+  #container-1 {
+    max-width: 1320px;
+  }
+  .btn-toogle-switch .label {
+    display: block;
+  }
+  .nav {
+    grid-template-columns: auto 1fr auto auto;
+    gap: 3rem;
+  }
+  #signin {
+    display: block;
+  }
+  .btn-mobile {
+    display: none;
+  }
+  .navbar {
+    display: block;
+  }
+}
 .section-2 {
   background: radial-gradient(118% 116.18% at 50% 100%, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 41.83%, rgba(241, 244, 253, 0.07) 82.52%);
   border: 1px solid #000;
@@ -970,6 +1129,9 @@ input::placeholder {
     font-size: 1.41875rem;
     font-weight: 800;
   }
+  .only-mobile-tablet {
+    display: flex;
+  }
 }
 @media (min-width: 1400px) {
   .part-7 {
@@ -983,168 +1145,23 @@ input::placeholder {
   .text-subscribe-desktop-only {
     display: block;
     display: flex;
-    align-items: center;
+    margin: 1rem 0 0 3rem;
   }
 }
-a {
-  color: #6366F1;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #6366F1;
-  text-decoration: underline;
-}
-
-.btn-toogle-switch {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  /* copy from W3 school */
-  /* The slider */
-  /* Rounded sliders */
-}
-.btn-toogle-switch .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-.btn-toogle-switch .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.btn-toogle-switch .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-}
-.btn-toogle-switch .slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-}
-.btn-toogle-switch input:checked + .slider {
-  background-color: #6366F1;
-}
-.btn-toogle-switch input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-.btn-toogle-switch input:checked + .slider:before {
-  transform: translateX(26px);
-}
-.btn-toogle-switch .slider.round {
-  border-radius: 34px;
-}
-.btn-toogle-switch .slider.round:before {
-  border-radius: 50%;
-}
-
-.btn-toogle-switch .label {
-  display: none;
-}
-
-.btn-primary {
-  background-color: #6366F1;
-  color: white;
-  border-radius: 8px;
-  padding: 12px 25px;
+.footer {
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-decoration: none;
-}
-.btn-primary:hover {
-  background-color: #9397AD;
-  color: white;
-  text-decoration: none;
-}
-.btn-primary i {
-  margin-right: 0.5rem;
-}
-
-.btn-mobile {
-  background-color: transparent;
-  border: none;
-  font-size: 2rem;
+  text-align: center;
+  padding: 0 4.5rem 3rem 4.5rem;
+  color: #9397AD;
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: Manrope;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
 }
 
-.nav-link {
-  color: #000;
-  font-weight: 600;
-  text-decoration: none;
-}
-.nav-link:hover {
-  text-decoration: underline;
-}
-
-.navbar {
-  display: none;
-}
-
-#signin {
-  display: none;
-}
-
-#container-1 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.nav {
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-  gap: 1.5rem;
-  align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-@media (min-width: 768px) {
-  #container-1 {
-    max-width: 720px;
-  }
-  .btn-toogle-switch .label {
-    display: block;
-  }
-  .nav {
-    gap: 3rem;
-  }
-}
-@media (min-width: 1400px) {
-  #container-1 {
-    max-width: 1320px;
-  }
-  .btn-toogle-switch .label {
-    display: block;
-  }
-  .nav {
-    grid-template-columns: auto 1fr auto auto;
-    gap: 3rem;
-  }
-  #signin {
-    display: block;
-  }
-  .btn-mobile {
-    display: none;
-  }
-  .navbar {
-    display: block;
-  }
-}
 body {
   font-family: Manrope;
 }/*# sourceMappingURL=style.css.map */
