--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -1,143 +1,216 @@
-.wrapper-logos {
-    display: none;
-}
-
-.phone-features {
-    display: none;
+.section-2 {
+    background: $bgP1;
+    border: 1px solid #000;
 }
 
 .part-2 {
-    padding: 0 1rem 0 1rem;
+    padding: 0.5rem;
     margin-left: auto;
     margin-right: auto;
 }
 
-.head-paragraph-features {
-    text-align: center;
+    .h-1 {
+        display: flex;
+        text-align: center;
+        margin-top: 1rem;
+        font-size: 2.13125rem;
+        line-height: 2.77375rem;
+        padding: 1rem;
+    }
+    .p-1 {
+        display: flex;
+        text-align: center;
+        font-size: 1.125rem;
+        line-height: 1.8rem;
+        margin-top: 1rem;
+    }
+    .btn-apple {
+        margin-top: 2rem;
+        display: flex;
+        width: 100%;
+        height: 3.15063rem;
+        padding: 0.55rem 7.575rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.5rem;
+        border: 1px solid #131022;
+        background: #131022;
+    }
+    .btn-google {
+        margin-top: 1rem;
+        display: flex;
+        width: 100%;
+        height: 3.15063rem;
+        padding: 0.55rem 7.575rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.5rem;
+        border: 1px solid #131022;
+        background: #131022;
+    }
+    .discover-more {
+        display: flex;
+        width: 2.75rem;
+        height: 2.75rem;
+        padding: 0.75rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 1.375rem;
+        border: 1px solid #FFF;
+        background: #FFF;
+    }
+    .disc {
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
+        margin: 2rem 0 2rem 5rem;
+        border: none;
+        background: none;
 }
 
-.header-features {
-    padding: 2rem;
-    font-size: 1.74375rem;
-    font-weight: 800;
-    line-height: 2.26313rem;
+.pic-tablet { 
+    grid-area: phones;
+    display: none;    
 }
 
-.paragraph-features {
-    line-height: 1.8rem;
-    padding: 0 1rem 0 1rem;
-}
-
-.parent-logo-text {
+.cont-2 {
     display: grid;
     grid-template-columns: auto;
-    gap: 1rem;
-    margin-bottom: 4rem;
-}
-
-.parent-logo-text p {
-    line-height: 1.6rem;
-
-}
-
-.position-text-pic{
-   display: flex;
-   align-items:flex-start;
-   padding-top: 2rem;
-}
-.sub-head-paragraphs {
-    margin-left: 1rem;
+    grid-template-rows: auto;
     
+}
+.head-1 {
+    display: none;
+}
+.pic-desktop {
+    display: none;
 }
 
 @media (min-width: 768px) {
-
+    .section-2 {
+        border: none;
+    }
+    
     .part-2 {
         max-width: 720px;
     }
-    
-    .wrapper-logos {
-        display: block;
+    .h-1 {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 3rem;
-        gap: 1rem;
+        text-align: center;
+        margin-top: 1rem;
+        font-size: 2.76875rem;
+        line-height: 3.6025rem;
+        padding: 3rem 10rem 3rem 10rem;
+        
+    }
+    .p-1 {
+        text-align: start;
+        margin: 5rem 1rem 0 0;
+        font-size: 1.125rem;
+        line-height: 1.8rem;
+        grid-row: 1;
+        
     }
 
-    #desktop-only {
-        display: none;
+    .pic-tablet { 
+        display: block;    
     }
-
-    .logo-desktop-tablet {
-        border: 1px solid $color-grey;
-        height: 100px;
-        width: 9.90625rem;
-        height: 6.15875rem;
-        border-radius: 8px;
-        padding: 2.05rem 0.55rem;
+    #pic {
+        grid-row: 1 / 4;
+        grid-column: 2 / 3;
+    }
+    .btn-google {
         display: flex;
+        width: 7.875rem;
+        height: 2.74375rem;
+        padding: 0.66563rem 1.05rem 0.55rem 1.05rem;
         justify-content: center;
         align-items: center;
+        border-radius: 0.5rem;
+        border: 1px solid #131022;
+        background: #131022;
     }
-    .parent-logo-text {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        gap: 1rem;
+    .btn-apple {
+        margin-top: 1rem;
+        display: flex;
+        width: 7.875rem;
+        height: 2.74375rem;
+        padding: 0.66563rem 1.05rem 0.55rem 1.05rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.5rem;
+        border: 1px solid #131022;
+        background: #131022;
         
+    }
+    .disc {
+        display: flex;
+        margin: 0;
+        gap: 1rem;
+        border: none;
+        background: none;
+        padding: 1rem 0 1rem 0;
+        grid-row: 3;
+    }
+    .apple-google-btns {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        grid-row: 2;
+        margin-top: 1rem;
+    }
+    .head-1 {
+        display: none;
+    }
+    .pic-desktop {
+        display: none;
     }
 }
 
 @media (min-width: 1400px) {
+    .section-2 {
+        border: none;
+        padding-top: 8rem;
+    }
+    
     .part-2 {
         max-width: 1320px;
-        display: grid;
-        height: 69rem;
         
     }
-    #desktop-only {
-        display: block;
+    .p-1 {
+        padding: 0 5rem 1rem 0;
+        font-size: 1.125rem;
     }
-    .phone-features {
-        display: block;
-        position: relative;
-        
+    .h-1 {
+        padding: 2rem 1rem 0 0;
     }
-    .image1 {
-        position: absolute;
-        z-index: 0;
-        top: 90%;
-        
-    }
-    .image2 {
-        position: absolute;
-        top: 110%;
-        left: 2%;
-        border-radius: 40px;
-        
-    }
-    .image3 {
-        position: absolute ;
-        top: 195%;
-        left: 2.5%;
-    }
-    .parent-logo-text {
-        padding-left: 37rem;
-        gap: 1rem;
-    }
-    .head-paragraph-features {
-        padding-left: 37rem;
-        text-align: start;
-    }
-    .header-features {
-        padding: 1rem;
-        font-size: 1.74375rem;
-        font-weight: 800;
-        line-height: 2.26313rem;
-    }
-    .logo-desktop-tablet {
-        width: 12.25rem;
-    }   
-}
 
+    .pic-tablet {
+        display: none;
+    }
+    .disc {
+        grid-row: 2;
+        padding: 0;
+        
+    }
+    .apple-google-btns {
+        grid-row: 2;
+        justify-content: flex-start;
+        padding: 0 0 5rem 0;
+    }
+    .headers {
+        display: none;
+    }
+    .head-1 {
+        display: block;
+        text-align: start;
+        font-size: 3.5rem;
+    }
+    .pic-desktop {
+        display: block;
+        grid-column: 3 / -1;
+        grid-row: 1 / 3;
+    }
+}
 
