--- a/styles/_part-5-onlydesktop.scss
+++ b/styles/_part-5-onlydesktop.scss
@@ -1,111 +1,101 @@
-.part-5 {
+.section-5-only-desktop {
     display: none;
 }
 @media (min-width: 768px) {
-    .part-5 {
+    .section-5-only-desktop {
         display: none;
     }
 }
 
 @media (min-width: 1400px) {
-    .section-6-only-desktop{
-        background-color: #F3F6FF;
-    }
-    .part-5 {
-        display: block;
+    .section-5-only-desktop {
         max-width: 1320px;
-        height: 33.88rem;
-        margin: 0 auto;
+        display: block;
+        height: 81.5rem;
         display: grid;
-        grid-template-columns: repeat(12, minmax(0, 1fr));
-        grid-template-rows: repeat(12, minmax(0, 1fr));
-        padding-top: 3rem;
+        grid-template-columns: repeat(24, minmax(0, 1fr));
+        grid-template-rows: repeat(24, minmax(0, 1fr));
+        position: relative;
+        padding: 0 1rem 0 1rem;
+        margin-left: auto;
+        margin-right: auto;
     }
-    .quote {
-        background-color: $brand-primary;
-        align-items: center;
+    .image-right {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(30%, -140%);
+    }
+    .image-right2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(130%, -190%);
+    }
+    .image-left {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-120%, 20%);
+    }
+    .image-left2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-115%, 70%);
+    }
+    .recieve-head {
+        grid-column: 14 / 19;
+        grid-row: 16 / 18;
+    }
+    .flex-recieve {
         display: flex;
-        justify-content: center;
-    }
-    #quote-first {
-        border: 1px transparent;
-        width: 2.75rem;
-        height: 2.75rem;
-        padding: 0.75rem;
-        box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.90);
-        border-radius: 0.375rem;
-        margin-left: 1rem;
-        margin-top: 1rem;
-        grid-column: 13 / 14;
-        grid-row: 2 / 3;
-        z-index: 1;
-    }
-    #quote-second {
-        border: 1px transparent;
-        width: 2.75rem;
-        height: 2.75rem;
-        padding: 0.75rem;
-        box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.90);
-        border-radius: 0.375rem;
-        margin-left: 1rem;
-        margin-top: 1rem;
-        grid-column: 7 / 8;
-        grid-row: 2 / 3;
-        z-index: 1;
-    }
-    .box {
-        background-color: #fff;
-        border: 1px transparent;
-        border-radius: 0.5rem;
-        width: 26rem;
-        padding: 3rem 1.5rem 1.5rem 1.5rem;
-        gap: 1.5rem;
-        box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
-        grid-column: 6 / 9;
-    }
-    .box-1 {
-        grid-column: 7 / 12;
-        grid-row: 3 / 10;
-    }
-    .box-2 {
-        grid-column: -1 / auto;
-        grid-row: 3 / 10;
-    }
-    .par-main {
-        padding: 1rem 0;
-    }
-    .name-title {
-        display: flex;
+        grid-column: 14 / 22;
+        grid-row: 18 / 21;
         gap: 1rem;
     }
-    .par-name {
-        color: #0B0F19;
-        font-feature-settings: 'liga' off, 'clig' off;
-        font-family: Manrope;
-        font-size: 1rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 160%;
+    .btn-1 {
+        grid-column: 4 / 7;
+        grid-row: 9 / 10;
     }
-    .par-designer {
-        color: #9397AD;
-        font-feature-settings: 'liga' off, 'clig' off;
-        font-family: Manrope;
-        font-size: 0.875rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 160%;
+    .btn-2 {
+        grid-column: 14 / 17;
+        grid-row: 21 / 22;
     }
-    h1 {
-        color:#0B0F19;
-        font-feature-settings: 'liga' off, 'clig' off;
-        font-family: Manrope;
-        font-size: 2.5rem;
-        font-style: normal;
-        font-weight: 800;
-        line-height: 130%;
-        grid-column: 1 / 5;
-        grid-row: 2 / auto;
-        padding-top: 2rem;
+    .make-money {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        grid-column: 4 / 12;
+        grid-row: 5 / 10;
+    }
+    .btn-money {
+        background-color: $brand-primary;
+        color: $light-text;
+        border-radius: 8px;
+        padding: 10px 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        gap: 1rem;
+        &:hover {
+            background-color: $color-grey;
+            color: $light-text;
+            text-decoration: none;
+        }
+    i {
+        margin-right: 0.5rem;
+    }
+    }
+    .list-head {
+        list-style: none;
+        gap: 1rem;
+    }
+    .check {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding-top: 10px;
     }
 }
