--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -1,55 +1,91 @@
-.section-8 {
-    margin: 0 auto;
-    padding: 0 1rem 3rem 1rem;
-}
 .part-7 {
-    background-color: #F3F6FF;
+  margin: 0 auto;
+  padding: 0 1rem 3rem 1rem;
+}
+
+.part-7 h2 {
+  padding: 1rem 1rem;
+  text-align: center;
+}
+
+.para-faq  {
+  padding: 1rem 1rem 3rem 1rem;
+  text-align: center;
+}
+
+.btn-accordion {
+    display: flex;
+    width: 2.75rem;
+    height: 2.75rem;
+    padding: 0.75rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1.375rem;
+    border: 1px solid #FFF;
+    background: #F3F6FF;
+}
+
+.box-accordion {
+  gap: 1.5rem;
+}
+
+.accordion {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    color: #131022;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: unset;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    font-style: normal;
+    transition: 0.4s;
+    box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
+    border-radius: 0.4375rem 0.4375rem 0rem 0rem;
+    line-height: 1.3rem;
   }
 
-.text-subscribe {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem 1rem;
-    font-size: 1.35rem;
-    font-weight: 800;
-    line-height: 1.8875rem;
-}
-.text-subscribe-desktop-only {
-    display: none;
-}
-.form {
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
-input::placeholder {
-    text-align:start;
-}
+  
+  .active, .accordion:hover {
+    background-color: #fff; 
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
 
-.input-icon {
-    position: relative;
-    width: 100%;
-    max-width: 100%;
-    margin: 1rem;
-} 
-.form-input {
-    border: 1px solid rgb(216, 216, 218);
-    border-radius: 10px;
-    padding: 1.3rem 1rem;
-    width: 100%;
-}
-.btn-subscribe {
-    border: none;
-    position: absolute;
-    vertical-align: middle;
-    right: 0;
+  .btn-support {
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+  }
+  
+  .btn-support-mobile-only {
     background-color: $brand-primary;
     color: $light-text;
     border-radius: 0.375rem;
-    width: 7rem;
-    height: 100%;
-    aspect-ratio: 1;
+    border: 1px solid #6366F1;
+    background: #6366F1;
+    width: 10rem;
+    padding: 0.675rem 1.77738rem 1.01875rem 1.8rem;
+    color: #FFF;
+    text-align: center;
+    font-style: normal;
+    line-height: 1.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    gap: 1rem;
     &:hover {
         background-color: $color-grey;
         color: $light-text;
@@ -57,57 +93,73 @@ input::placeholder {
     }
 }
 
-@media (min-width: 768px) {
-    .part-7 {
-        min-width: 720px;
-        display: flex;
-        height: 13.63rem;
-        margin-right: 2rem;
-        margin-left: .5rem;
-    }
-    .btn-subscribe {
-        border: none;
-        position: absolute;
-        vertical-align: middle;
-        right: 0;
-        background-color: $brand-primary;
-        color: $light-text;
-        border-radius: 0.375rem;
-        width: 7rem;
-        height: 100%;
-        aspect-ratio: 1;
-        &:hover {
-            background-color: $color-grey;
-            color: $light-text;
-            text-decoration: none;
-        }
-    }
-    .text-subscribe {
-        margin: 1rem 3rem 1rem 1rem;
-        gap: 3rem;
-    }
-    .text-subscribe h4 {
-        font-size: 1.41875rem;
-        font-weight: 800;
-    }
-    .only-mobile-tablet {
-        display: flex;
-    }
+.box1-support {
+  display: none;
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 768px) {
+
+  .part-7 {
+    max-width: 720px;
+  }
+  .btn-support-mobile-only {
+    display: none;
+  }
+  .boxes-suport {
+    display: flex;
+    justify-content: space-between;
+  }
+  .box1-support {
+    display: block;
+    display: grid;
+    gap: 1.5rem;
+    border: 1px solid #e9eefe;
+    border-radius: 0.5rem;
+    width: 21rem;
+    height: 11rem;
+    padding: 1.5rem;
+  }
+
+  .contact-chat {
+    color: green;
+  }
+
+  @media (min-width: 1400px) {
     .part-7 {
-        max-width: 1320px;
-        margin: 0 auto;
-        padding: 0 1rem 3rem 1rem;
+      max-width: 1320px;
+      display: grid;
+      grid-template-columns: repeat(12, minmax(0, 1fr));
+      grid-template-rows: repeat(12, minmax(0, 1fr));
+      height: 45rem;
     }
-    .only-mobile-tablet {
-        display: none;
+    .boxes-suport {
+      display: flex;
+      justify-content:left;
+      gap: 1rem;
+      grid-column: 1 / 5;
+      grid-row: 5 / 8;
     }
-    .text-subscribe-desktop-only {
-        display: block;
-        display: flex;
-        margin: 1rem 0 0 3rem;
+    .box-accordion {
+      grid-column: -1 / 7;
+      grid-row: 2 / 10;
+    }
+    #box-2 {
+      width: 13rem;
+    }
+    .part-7 h2 {
+      text-align: start;
+      grid-column: 1 / 4;
+      grid-row: 2 / 3;
+      padding: 0;
     }
     
+    .para-faq  {
+      padding: 1rem 1rem 3rem 1rem;
+      text-align:start;
+      grid-column: 1 / 4;
+      grid-row: 3 / 5;
+      margin-top: 2rem;
+      padding: 0;
+    }
+  }
 }
