--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,10 +1,15 @@
 $bgP1: radial-gradient(118% 116.18% at 50% 100%, rgba(99, 102, 241, 0.10) 0%, rgba(218, 70, 239, 0.05) 41.83%, rgba(241, 244, 253, 0.07) 82.52%);
 $brand-primary: #6366F1;
-$light-text: white;
+$light-text: #fff;
 $color-grey: #9397AD;
-$color-dark: #000;
+$color-dark: #131022;
 $bgp3: #F3F6FF;
 
 
 $container-padding: 2rem 2rem 2rem 0;
 $margin-base: 0 auto;
+
+// light-dark mode
+$dark: #131022;
+$light: #fff;
+
