--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
+html {
+    color-scheme: light;
+}
+
+.dark {
+    color-scheme: dark;
+}
+
 body {
     font-family: Manrope;
     margin: $margin-base;
