--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -1,6 +1,7 @@
 .section-2 {
-    background: $bgP1;
+    background: var(--color-background-pink);
     border: 1px solid #000;
+    
 }
 
 .part-2 {
@@ -10,6 +11,7 @@
 }
 
     .h-1 {
+        color: var(--color-text);
         display: flex;
         text-align: center;
         margin-top: 1rem;
@@ -68,21 +70,7 @@
         background: none;
 }
 
-.pic-tablet { 
-    grid-area: phones;
-    display: none;    
-}
-
-.cont-2 {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    
-}
-.head-1 {
-    display: none;
-}
-.pic-desktop {
+#pic {
     display: none;
 }
 
@@ -93,31 +81,30 @@
     
     .part-2 {
         max-width: 720px;
+        padding: 1.94rem;
+        height: 50rem;
+        display: grid;
+        grid-template-columns: repeat(12, minmax(0, 1fr));
+        grid-template-rows: repeat(12, minmax(0, 1fr));
     }
     .h-1 {
-        display: flex;
-        text-align: center;
-        margin-top: 1rem;
-        font-size: 2.76875rem;
         line-height: 3.6025rem;
-        padding: 3rem 10rem 3rem 10rem;
-        
+        grid-column: 2 / 12;
+        grid-row: 2 / 5;
     }
-    .p-1 {
-        text-align: start;
-        margin: 5rem 1rem 0 0;
-        font-size: 1.125rem;
+    .head-par-1 {
+        margin-top: 2rem;
         line-height: 1.8rem;
-        grid-row: 1;
-        
-    }
-
-    .pic-tablet { 
-        display: block;    
+        grid-column: 1 / 6;
+        grid-row: 7 / 10;
     }
     #pic {
-        grid-row: 1 / 4;
-        grid-column: 2 / 3;
+        display: block;
+        grid-column: 5 / 12;
+        grid-row: 6 / 12;
+        object-fit: fill;
+        padding-left: 1rem;
+        padding-top: 2.3rem;
     }
     .btn-google {
         display: flex;
@@ -141,7 +128,6 @@
         border-radius: 0.5rem;
         border: 1px solid #131022;
         background: #131022;
-        
     }
     .disc {
         display: flex;
@@ -149,19 +135,17 @@
         gap: 1rem;
         border: none;
         background: none;
-        padding: 1rem 0 1rem 0;
-        grid-row: 3;
+        grid-column: 1 / 4;
+        grid-row: 11 / 13;
     }
     .apple-google-btns {
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 1rem;
-        grid-row: 2;
-        margin-top: 1rem;
-    }
-    .head-1 {
-        display: none;
+        padding-left: 3rem;
+        grid-column: 1 / 5;
+        grid-row: 10 / 11;
     }
     .pic-desktop {
         display: none;
@@ -171,46 +155,61 @@
 @media (min-width: 1400px) {
     .section-2 {
         border: none;
-        padding-top: 8rem;
+        margin-top: 5rem;
     }
     
     .part-2 {
         max-width: 1320px;
         
     }
-    .p-1 {
-        padding: 0 5rem 1rem 0;
+    .head-par-1 {
+        margin-top: 1rem;
         font-size: 1.125rem;
+        line-height: 1.8rem;
+        grid-column: 1 / 5;
+        grid-row: 5 / 7;
     }
     .h-1 {
-        padding: 2rem 1rem 0 0;
-    }
-
-    .pic-tablet {
-        display: none;
-    }
-    .disc {
-        grid-row: 2;
-        padding: 0;
-        
-    }
-    .apple-google-btns {
-        grid-row: 2;
-        justify-content: flex-start;
-        padding: 0 0 5rem 0;
-    }
-    .headers {
-        display: none;
-    }
-    .head-1 {
-        display: block;
         text-align: start;
         font-size: 3.5rem;
+        grid-column: 1 / 6;
+        grid-row: 2 / 5;
+        padding: 0;
     }
-    .pic-desktop {
+    .headers {
+        color: var(--color-text);
+        font-size: 3.5rem;
+    }
+    .p-1 {
+        text-align: start;
+    }
+    .disc {
+        padding: 0;
+    }
+    .btn-google {
+        width: 11.25rem;
+        height: 3.25rem;
+    }
+    .btn-apple {
+        width: 11.25rem;
+        height: 3.25rem;
+    }
+    .apple-google-btns {
+        justify-content: flex-start;
+        padding: 2rem 0 5rem 0;
+        grid-column: 1 / 5;
+        grid-row: 7 / 9;
+    }
+    #pic {
         display: block;
-        grid-column: 3 / -1;
-        grid-row: 1 / 3;
+        grid-column: 5 / 12;
+        grid-row: 1 / 12;
+        padding: 5rem 0 0 6rem;
+       
+        img {
+            height: 43rem;
+            width: 39.46;
+        }
     }
 }
 
