--- a/styles/_part-8.scss
+++ b/styles/_part-8.scss
@@ -2,7 +2,7 @@
     padding: 0 1rem 3rem 1rem;
 }
 .part-8 {
-    background-color: #F3F6FF;
+    background-color: var(--color-background-blue);
   }
 
 .text-subscribe {
